# bangla-synonyms

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini
bangla_synonyms/: __init__.py  _scrapper.py  cli.py  synonyms.py
bangla_synonyms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bangla_synonyms/core/: __init__.py  _english_bangla.py  _quality.py  _shabdkosh.py  _wikitext.py
tests/: conftest.py  test_batch_scraper.py  test_cli.py  test_dataset.py  test_dataset_manager.py  test_scrapper.py  test_top_level_api.py  test_wordlist_fetcher.py
