[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "bangla-synonyms"
version         = "1.0.0"
description     = "Bangla synonym lookup — offline dataset + live Wiktionary scraping"
readme          = "README.md"
license         = { text = "MIT" }
authors = [
    { name = "Rasel Meya", email = "your-email@example.com" }
]
requires-python = ">=3.9"
keywords        = ["bangla", "bengali", "nlp", "synonyms", "wiktionary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Bengali",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "click>=8.1",
    "rich>=13.0",
]

[project.urls]
Homepage   = "https://github.com/raselmeya94/bangla-synonyms"
Repository = "https://github.com/raselmeya94/bangla-synonyms"
Issues     = "https://github.com/raselmeya94/bangla-synonyms/issues"

[project.scripts]
bangla-synonyms = "bangla_synonyms.cli:main"

[tool.setuptools.packages.find]
where = ["."]
