[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "bangla-synonyms"
version         = "1.0.0"
description     = "Bangla synonym lookup — offline dataset + live Web Scraping"
readme          = "README.md"
license         = { text = "MIT" }
authors = [
    { name = "Rasel Meya", email = "raselmeya94@gmail.com" }
]
requires-python = ">=3.9"
keywords        = ["bangla", "bengali", "nlp", "synonyms", "wiktionary"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Bengali",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "click>=8.1"
]

# Optional developer dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",        # Testing framework
    "pytest-cov>=4.0",    # Test coverage
    "black>=23.0",        # Code formatting
    "isort>=5.0",         # Import sorting
    "mypy>=1.0",          # Type checking
    "pre-commit>=3.0",    # Git hooks
    "twine>=4.0",         # For building/uploading packages
    "build>=1.0"          # For building wheels/source
]

[project.urls]
Homepage   = "https://github.com/raselmeya94/bangla-synonyms"
Repository = "https://github.com/raselmeya94/bangla-synonyms"
Issues     = "https://github.com/raselmeya94/bangla-synonyms/issues"

[project.scripts]
bangla-synonyms = "bangla_synonyms.cli:main"

[tool.setuptools.packages.find]
where = ["."]